Completed refactoring of lone element, with generated tests.